fix: close button overlap

--- a/frontend/src/components/Modal/styles.css
+++ b/frontend/src/components/Modal/styles.css
@@ -18,8 +18,8 @@
   margin-bottom: 5rem;
 
   border-radius: 4px;
-  overflow-y: auto;
-  overflow-x: hidden;
+  /* overflow-y: auto; */
+  /* overflow-x: hidden; */
 }
 
 @media (max-height: 900px) {
